<resources>
    <string name="app_name">TutorFinder</string>
    <string name="action_settings">Settings</string>

    <!-- Signup page -->
    <string name="signup_signupBtn">Sign up</string>
    <string name="signup_firstName">First name</string>
    <string name="signup_lastName">Last name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirmPassword">Confirm Password</string>
</resources>
