<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.signup.SignupActivity">

    <EditText
        android:id="@+id/signup_firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/temp_margin"
        android:hint="@string/signup_firstName"
        android:inputType="text" />

    <EditText
        android:id="@+id/signup_lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/temp_margin"
        android:hint="@string/signup_lastName"
        android:inputType="text" />

    <EditText
        android:id="@+id/signup_emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/temp_margin"
        android:hint="@string/signup_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signup_passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/temp_margin"
        android:hint="@string/signup_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signup_confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/temp_margin"
        android:hint="@string/signup_confirmPassword"
        android:inputType="textPassword"
        android:nextFocusDown="@id/signup_btn" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/temp_margin"
        android:text="@string/signup_signupBtn" />
</LinearLayout>